--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@ body{
     display: flex;
     margin: 40px 20px;
     flex-direction: column;
-    flex:0;
+    justify-content: center;
+    align-items: center;
 }
 
 #container{
@@ -10,6 +11,8 @@ body{
     flex-wrap: wrap;
     width: 960px;
     height: 960px;
+    justify-content: center;
+    align-items: center;
 }
 
 .red-pink{
@@ -33,10 +36,10 @@ body{
 }
 
 button{
-    display: flex;
     margin: 5px 5px 10px 0px;
     padding: 4px 10px 3px 15px;
     height: 30px;
     width: 150px;
     font-family: Helvetica, sans-serif;
+    border-radius: 10px;
 }
