--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     background-color: rgb(246, 222, 203);
     display: flex;
-    margin: 40px 20px;
+    margin: 30px 40px 30px 20px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -40,10 +40,15 @@ body{
 }
 
 button{
-    margin: 5px 5px 10px 0px;
-    padding: 4px 10px 3px 15px;
-    height: 30px;
-    width: 150px;
-    font-family: "Brush Script MT", sans-serif;
+    margin: 0px 130px 20px 5px;
+    padding: 4px 15px;
+    font-family: 'Brush Script MT', cursive;
     border-radius: 10px;
+    background-color: rgb(252, 247, 243);
+    border: 2px solid rgb(252, 247, 243);
+    font-size: 15px;
+}
+
+#btn-flex{
+    align-self: flex-end;
 }
