--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body{
 }
 
 button{
-    margin: 0px 130px 20px 5px;
+    margin: 0px 5px 20px 130px;
     padding: 4px 15px;
     font-family: 'Brush Script MT', cursive;
     border-radius: 10px;
@@ -50,5 +50,5 @@ button{
 }
 
 #btn-flex{
-    align-self: flex-end;
+    align-self: flex-start;
 }
